Bug 474981 - Searching for "shutdown", "restart" or "sleep" brings up the "Desktop Session" KCM instead of performing the actions themselves
Summary: Searching for "shutdown", "restart" or "sleep" brings up the "Desktop Session...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.27.8
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 491564 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-28 12:35 UTC by Prajna Sariputra
Modified: 2025-03-11 15:34 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Prajna Sariputra 2023-09-28 12:35:11 UTC
SUMMARY
In the Application Dashboard, searching for "shutdown", "restart" or "sleep" brings up the "Desktop Session" KCM as the top search result instead of the option themselves, so typing said words and pressing enter just brings up System Settings. This seems specific to the Dashboard, since if I try using the default Application Launcher, KRunner or the search in Overview the results are as expected (with the action coming first and the KCM showing up lower down).


STEPS TO REPRODUCE
1. Use the Show Alternatives option to replace the default Application Launcher with the Application Dashboard
2. Open the Application Dashboard
3. Search for "shutdown", "restart" or "logout"

OBSERVED RESULT
The "Desktop Session" KCM appears as the top search result.

EXPECTED RESULT
The actions "Shut Down", "Restart" and "Log Out" show up as the top search result respectively.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-09-28 19:52:34 UTC
Can reproduce in Plasma 6 too. The power/session actions from the Powerdevil runner aren't adequately prioritized here.
Comment 2 Olivier BELLEUX 2023-10-07 16:09:51 UTC
I confirm the bug with the keywords :

- "éteindre" which returns "search éteindre in google".

- hibernate", even partially, returns "energy hibernate".

- sleep", on the other hand, returns "sleep" and "hibernate".

-------------------
Operating System: openSUSE Leap 15.5
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 5.14.21-150500.55.28-default (64-bit)
Graphics Platform: X11
Processors: 8 × 11th Gen Intel® Core™ i7-1165G7 @ 2.80GHz
Memory: 15.4 Gio of RAM
Graphics Processor: Mesa Intel® Xe Graphics
Manufacturer: Notebook
Product Name: NLx0MU
System Version: Not Applicable
Comment 3 TraceyC 2024-09-30 17:10:01 UTC
Potentially related bug dealing with search results in krunner not respecting priorities

https://bugs.kde.org/show_bug.cgi?id=485881
KRunner prioritizes file search results even though it is set to lower priority than applications
Comment 4 Nate Graham 2024-11-27 21:10:18 UTC
*** Bug 491564 has been marked as a duplicate of this bug. ***
Comment 5 Mathias Tillman 2025-03-02 10:57:21 UTC
I'm not able to reproduce this on 6.3.1. Searching for 'shutdown', 'restart' etc both on the application dashboard and regular krunner brings up the relevant option, and clicking it performs the action (with the usual countdown). Maybe it's been resolved?
Comment 6 Nate Graham 2025-03-03 14:51:45 UTC
I can still reproduce it on git masterA theory: this is caused by the fact that by default, we make Applications and System Settings "favorite" runners. Because the item for the Desktop Session KCM matches, and it's a System Settings page, it gets put first even though it's not the best match.

That would make this "intentional, though not ideal". Worth thinking about.
Comment 7 Mathias Tillman 2025-03-03 19:34:36 UTC
(In reply to Nate Graham from comment #6)
> I can still reproduce it on git masterA theory: this is caused by the fact
> that by default, we make Applications and System Settings "favorite"
> runners. Because the item for the Desktop Session KCM matches, and it's a
> System Settings page, it gets put first even though it's not the best match.
> 
> That would make this "intentional, though not ideal". Worth thinking about.

You're right, I see it now. And yes, this does seem like it will be because of the favourites list. I don't know if there's an easy solution that would please everyone, but I feel like search matches that match text in the display title of the result should be prioritised higher than ones that don't. But that might lead to some confusion as well since it won't always match the ordering of the favourites list. See, eg, https://bugs.kde.org/show_bug.cgi?id=489866
Comment 8 Nate Graham 2025-03-04 15:59:59 UTC
This and Bug 489866 seem mutually exclusive, yeah.
Comment 9 Nate Graham 2025-03-04 16:07:39 UTC
I see two practical paths forward here:
1. Remove some keywords from the Desktop Session KCM so it doesn't get matched when the user searches for power-related actions
2. Change the default set of favorite plugins to put "Desktop Sessions" on top.
Comment 10 aronkvh 2025-03-04 20:57:00 UTC
The assumption that most user didn't realize that the KCM would be prioritized even over shutdown when they set favorites seems like the more reasonable one. So I think it should probably be shutdown first, even if technically makes less sense
Comment 11 aronkvh 2025-03-04 21:00:38 UTC
Interesting, my language isn't set to English, and this only happens for logout, but not the others. (and only if I manually put system settings to the highest priority among favourites (6.3.2)
Comment 12 Nate Graham 2025-03-04 21:31:08 UTC
It depends on the way the keywords in the desktop session KCM are translated in your language, compared to the way the power/session actions are translated.

It's pretty clear that the power/session actions should always show up first here since that best matches the user's intention; the question is how best to achieve that.
Comment 13 Bug Janitor Service 2025-03-07 01:07:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2870
Comment 14 Bug Janitor Service 2025-03-07 01:08:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/milou/-/merge_requests/85
Comment 15 Nate Graham 2025-03-11 15:12:42 UTC
Git commit cd65653bed19bc79b008e6496bbafe2a0a41378c by Nate Graham.
Committed on 07/03/2025 at 01:06.
Pushed by ngraham into branch 'master'.

Add power/session actions to favorite runners list

Companion to
https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2870

M  +2    -1    lib/resultsmodel.cpp

https://invent.kde.org/plasma/milou/-/commit/cd65653bed19bc79b008e6496bbafe2a0a41378c
Comment 16 Nate Graham 2025-03-11 15:34:17 UTC
Git commit 262338251fddb021e0658c9e39f6f310b8a4e3f9 by Nate Graham.
Committed on 11/03/2025 at 14:54.
Pushed by ngraham into branch 'master'.

kcms/runners: Add power/session actions to favorite runners list

Right now we have a problem that when people search for "shut down" and
"reboot" and the like, the Desktop Sessions KCM appears first. This is
currently expected because the System Settings runner is a default
favorite runner, and the power/session runners are not. Logical, but not
ideal.

There are three ways we can fix this:
1. Add the runners for power and session actions to the default favorite
   runners list.
2. Remove a bunch of keywords from the desktop sessions KCM so it
   doesn't match those kinds of searches anymore.
3. Remove all default favorite runners and hope the internal weightings
   are good enough to solve the problem.

This commit implements option 1, which is the least invasive change
given the current implementations.
FIXED-IN: 6.4.0

M  +4    -1    kcms/runners/plasmasearch/kcm.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/262338251fddb021e0658c9e39f6f310b8a4e3f9